--- a/Spot-A-Cop/Info.plist
+++ b/Spot-A-Cop/Info.plist
@@ -44,7 +44,7 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string></string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>To know where to drop a pin when you spot a cop </string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string></string>
 </dict>
